# concord-beta

./: .gitignore  Cargo.toml  DEVELOPMENT_LOG.md  README.md  STATUS_REPORT.md  commercial_deployment_database.md  entities.json  mempalace.yaml
.github/workflows/: ci.yml
crates/concord-core/: Cargo.toml
crates/concord-core/src/: cluster.rs  config.rs  governance.rs  lib.rs  mesh_map.rs  totp.rs  trust.rs  types.rs  wire.rs
crates/concord-daemon/src/: config.rs  main.rs
crates/concord-media/: Cargo.toml
crates/concord-media/src/: audio.rs  engine.rs  lib.rs  session.rs  sfu.rs  signaling.rs  video.rs
crates/concord-net/: Cargo.toml
crates/concord-net/examples/: two_peers.rs
crates/concord-net/src/: behaviour.rs  channels.rs  discovery.rs  events.rs  lib.rs  mesh.rs  mpc_transport.rs  node.rs  swarm.rs  sync.rs  transport.rs  tunnel.rs  wireguard.rs
crates/concord-store/: Cargo.toml
crates/concord-store/src/: alias_store.rs  conversation_store.rs  db.rs  forum_store.rs  friends_store.rs  invites.rs  lib.rs  mesh_map_store.rs  mesh_store.rs  peers.rs  servers.rs  settings_store.rs  totp_store.rs  webhook_store.rs
crates/concord-webhost/: Cargo.toml
crates/concord-webhost/src/: assets.rs  lib.rs  server.rs  webhook.rs  ws.rs
design/: KINETIC_NODE_DESIGN.md  PENDING_DESIGN_NOTES.md
design/html/: dashboard_with_friends.html  friends_hub.html  home_dashboard.html  home_dashboard_alt.html  host_a_server_v1.html  host_a_server_v2.html  host_session.html  host_session_full_width.html  node_map.html  profile.html  server_creation.html  settings.html  system_health.html
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: tauri.test.ts  tauri.ts
frontend/src/components/auth/: GuestAuthPage.tsx
frontend/src/components/chat/: ChatMessage.tsx  MessageInput.tsx  MessageList.tsx  ServerPage.tsx
frontend/src/components/dashboard/: DashboardPage.tsx
frontend/src/components/direct/: ConversationView.tsx  DirectPage.tsx
frontend/src/components/dm/: DmPage.tsx
frontend/src/components/forum/: ForumPage.tsx  ForumPostCard.tsx
frontend/src/components/friends/: FriendsPage.tsx
frontend/src/components/layout/: BottomNav.tsx  TopBar.tsx  WidgetView.tsx
frontend/src/components/mesh/: NodeMapPage.tsx  PeerList.tsx
frontend/src/components/profile/: ProfilePage.tsx
frontend/src/components/server/: ChannelSidebar.tsx  HostSessionPage.tsx  InvitePanel.tsx  JoinServerModal.tsx  MemberList.tsx  (+3 more)
frontend/src/hooks/: useNodeEvents.ts  useWindowSize.ts
frontend/src/stores/: auth.ts  conversations.ts  dm.ts  forum.ts  friends.ts  mesh.test.ts  mesh.ts  servers.test.ts  servers.ts  settings.ts  voice.ts  webhost.ts
frontend/src/utils/: format.test.ts  format.ts
scripts/: build-android.sh  build-desktop.sh  build-ios.sh  build-server.sh  dev.sh  setup-mobile-env.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: events.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  conversations.rs  forums.rs  friends.rs  mesh.rs  messaging.rs  mod.rs  settings.rs  trust.rs  webhooks.rs  webhost.rs
(+10 files in other folders)
