[package]
name = "concord-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
rmp-serde = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
data-encoding = "2"
