[package]
name = "concord-media"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["native-audio"]
native-audio = ["dep:cpal", "dep:audiopus"]

[dependencies]
str0m = "0.7"
cpal = { version = "0.17", optional = true }
audiopus = { version = "0.3.0-rc.0", optional = true }
concord-core = { path = "../concord-core" }
concord-net = { path = "../concord-net" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1"
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
