[package]
name = "concord-webhost"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = "8"
concord-core = { path = "../concord-core" }
concord-net = { path = "../concord-net" }
concord-store = { path = "../concord-store" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = "0.8"
mime_guess = "2"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
